[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "photokb"
version = "0.1.0"
description = "Local, Markdown-driven AI photo library for Obsidian — CLIP tagging, EXIF, semantic search, and an offline gallery."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "chaofiber"}]
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2",
  "torchvision",
  "open_clip_torch>=2.24",
  "Pillow>=9.1",
  "numpy",
  "ftfy",
  "regex",
]

[project.urls]
Homepage = "https://github.com/chaofiber/photokb"
Repository = "https://github.com/chaofiber/photokb"

# Installs two console commands (aliases of each other).
[project.scripts]
pkb = "photokb.cli:main"
photokb = "photokb.cli:main"

[tool.setuptools]
packages = ["photokb"]
